Adding file uploads to forum

--- a/EECIP/Content/Site.css
+++ b/EECIP/Content/Site.css
@@ -471,6 +471,47 @@ ul.main-navigation-menu > li.active > a {
     line-height: 19px;
 }
 
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
+.postuploadholder p {
+    text-align: right;
+}
+
+.postuploadedfilesholder ul li {
+    padding: 0 10px 4px 0;
+    margin: 0;
+    list-style: none;
+    display: inline-block;
+}
+
+.postuploadedfilesholder ul li a.fileupload, .postuploadedfilesholder ul li a:visited.fileupload {
+    text-decoration: none;
+}
+
+.postuploadedfilesholder ul li a.fileupload .glyphicon, .postuploadedfilesholder ul li a:visited.fileupload .glyphicon {
+    color: #B3B3B3;
+    font-size: 36px;
+}
+
+.postedfilename {
+    font-size: 12px;
+    color: #636267;
+}
+
 /* FORUM Side Boxes */
 .side-box {
     padding: 0 0 20px 0;
